[package]
name = "judger"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.49", features = ["derive"] }
libseccomp = "0.4.0"
nix = { version = "0.30.1", features = ["resource", "process", "user", "fs", "signal"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"


[[bin]]
name = "judger"
path = "src/bin/main.rs"

[[example]]
name = "hello_world"
path = "examples/hello_world.rs"

[[example]]
name = "child_process"
path = "examples/child_process.rs"