[package]
name = "judger"
version = "0.5.0"
edition = "2024"
authors = ["harkerhand <harkerhand@outlook.com>"]
description = "A sandboxed environment for running untrusted code safely."
license = "MIT"
repository = "https://github.com/harkerhand/judger-rs"
readme = "README.md"
keywords = ["sandbox", "security", "seccomp", "container", "isolation"]
categories = ["development-tools"]

[dependencies]
clap = { version = "4.5.53", features = ["derive"] }
libseccomp = "0.4.0"
nix = { version = "0.30.1", features = [
    "resource",
    "process",
    "user",
    "fs",
    "signal",
] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"


[[bin]]
name = "judger"
path = "src/bin/main.rs"

